--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 practicalConcepts.md
-frontend/node_modules/
-frontend/.next/
-frontend/.env
-backend/node_modules/
-backend/.env
-backend/.video
+frontend/
+backend/
